# libsd

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/: fetch_sdk.py  gen_mcu_matrix.py  mcus.json
.github/workflows/: build.yml  quality.yml
examples/rp2040/: CMakeLists.txt
examples/rp2040/spi/: CMakeLists.txt  spi.c
hw/rp2040/: README.md  family.cmake  libsd_mcu_defs.h  pico_sdk_import.cmake  sd_rp2040.c
include/: sd.h  sd_defines.h  sd_host.h  sd_types.h
include/bus/: sd_spi.h
src/: sd_core.c  sd_spi.c
tools/ci/: check_license.py
